--- a/backup-global.css
+++ b/backup-global.css
@@ -23,7 +23,7 @@
   --destructive-foreground: oklch(0.98 0.01 0);
   --border: oklch(0.25 0.01 0);
   --input: oklch(0.18 0 0);
-  --ring: oklch(80.409% 0.26775 141.987);
+  --ring: oklch(0.68 0.18 50.77);
   --chart-1: oklch(0.68 0.18 50.77);
   --chart-2: oklch(0.6 0.118 184.704);
   --chart-3: oklch(0.398 0.07 227.392);
